# EVALFlow

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: classification.yaml  example.jsonl  example.yaml  summarization.yaml  summarization_openai.yaml
evalflow/: cli.py
evalflow/datasets/: loader.py
evalflow/metrics/: bleu.py  registry.py
evalflow/providers/: base.py  dummy.py  factory.py  openai.py
evalflow/reporters/: html.py  markdown.py
evalflow/runners/: base.py
evalflow/utils/: io.py
examples/: quickstart.ipynb
examples/data/: classification_small.jsonl  summarization_small.jsonl
tests/: test_add.py  test_metrics.py  test_smoke.py
